[project]
name = "nist-mcp"
version = "0.1.0"
description = "MCP server for the NIST Chemistry WebBook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "nistchempy",
    "requests",
    "beautifulsoup4",
    "diskcache",
]

[project.scripts]
nist-mcp = "nist_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nist_mcp"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
]
